--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.16",
+    "@types/node": "^12.6.8",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2"
   },
