--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/jest": "^24.0.16",
-    "@types/node": "^12.6.8",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.3",
     "glob": "^7.1.4",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.6.0-dev.20190730"
+    "typescript": "^3.6.2"
   },
   "scripts": {
     "test": "jest"
