Custom austom-after-program-create

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,3 +25,4 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - run: yarn test
+      - run: yarn test -t 'custom-after-program'
