Fix npm test command in CI

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # - run: yarn test
-      - run: npm test -t 'custom-after-program'
+      - run: npm test -- -t 'custom-after-program'
